# Codewars

./: .gitignore  README.md
Assembly/: main.nasm  run.sh
BrainFuck/: AlphabeticalAddition.bf  Main.bf
C/: CMakeLists.txt  main.c
C#/: Csharp.sln
C++/: CMakeLists.txt  main.cpp
C++/src/: Beggars.cpp  DecimalTimeConversion.cpp  DecimalTimeConversion.hpp  GetLoop.cpp  Histogram.cpp  Histogram.hpp  PlayPass.cpp  PlayPass.hpp  RomanNumerals.hpp  beggars.cpp  beggars.hpp  decimal_time_conversion.cpp  decimal_time_conversion.hpp  get_loop.cpp  get_loop.hpp  histogram.cpp  histogram.hpp  play_pass.cpp  play_pass.hpp  roman_numerals.cpp  roman_numerals.hpp
C/Source/: AlphabeticalAddition.c  AlphabeticalAddition.h  BallUpwards.c  BallUpwards.h  GetLoop.c  GetLoop.h  Histogram.c  Histogram.h  NextBigger.c  NextBigger.h  RomanNumerals.c  RomanNumerals.h
C/src/: AlphabeticalAddition.c  AlphabeticalAddition.h  BallUpwards.c  BallUpwards.h  BitCounting.c  BitCounting.h  GetLoop.c  GetLoop.h  Histogram.c  Histogram.h  NextBigger.c  NextBigger.h  RomanNumerals.c  RomanNumerals.h  alphabetical_addition.c  alphabetical_addition.h  bit_counting.c  bit_counting.h  get_loop.c  get_loop.h  histogram.c  histogram.h  next_bigger.c  next_bigger.h  play_pass.c  play_pass.h  roman_numerals.c  roman_numerals.h
Clojure/: Main.clj  deps.edn  main.clj
Cobol/: bit_counter.cbl  main.cbl  next_bigger_number.cbl
CoffeeScript/: main.coffee  package.json  webpack.config.js
Cpp/: CMakeLists.txt  main.cpp
Crystal/: Main.cr
Csharp/: Csharp.sln
Elm/: elm.json
F#/: Fsharp.sln
Fsharp/: Fsharp.sln
Groovy/: Main.groovy
Haskell/: Haskell.cabal  package.yaml
JavaScript/: Main.js  main.js  package.json  (+1 more)
(+152 files in other folders)
